scroll transitioning sorted, navigation bar fixed to top and visible throughout viewport, change in background color of drop items when hover.Last daring thing to do with Javascript, which i am a newbie to.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,6 +92,10 @@ h1 {
     color: yellowgreen !important;
 }
 
+.dropdown-menu a:hover {
+    background-color: #ddd;
+}
+
 .apple {
     font-size: 60px;
     color: white;
